3-tier-app/k8s-manifest/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend

---
apiVersion: v1
kind: Namespace
metadata:
  name: backend

---
apiVersion: v1
kind: Namespace
metadata:
  name: database
