3-tier-app/k8s-manifest/quotes-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-api
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes-api
  template:
    metadata:
      labels:
        app: quotes-api
    spec:
      containers:
        - name: quotes-api
          image: 505017489291.dkr.ecr.ap-south-1.amazonaws.com/quotes-api:latest
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: backend
spec:
  selector:
    app: quotes-api
  ports:
    - port: 5001
      targetPort: 5001
