3-tier-app/k8s-manifest/quotes-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes-frontend
  template:
    metadata:
      labels:
        app: quotes-frontend
    spec:
      containers:
        - name: quotes-frontend
          image: 505017489291.dkr.ecr.ap-south-1.amazonaws.com/quotes-frontend:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: quotes-frontend-svc
  namespace: frontend
spec:
  selector:
    app: quotes-frontend
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
